# mcp-calendar

./: .env.example  .env.sample  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
app/: __init__.py  mcp_server.py
app/api/: schemas.py
app/core/: config.py  database.py
app/middlewares/: auth.py
app/models/: token.py
app/services/: google_calendar.py  token.py
app/utils/: auth.py
